# jumping-cubes-tactics

./: CMakeLists.txt  README.md
data/: risk.jct  risk.json  test.jct  test.json
src/: config.h.in  main.cpp
src/gamedata/: edge.cpp  edge.h  edge_p.h  game.cpp  game.h  game_p.h  node.cpp  node.h  node_p.h  player.cpp  player.h  player_p.h
src/gamelogic/: turncontroller.cpp  turncontroller.h  turncontroller_p.h
src/graphics/: cursor_sprite.cpp  cursor_sprite.h  cursor_sprite_p.h  edge_sprite.cpp  edge_sprite.h  edge_sprite_p.h  game_object.h  node_sprite.cpp  node_sprite.h  node_sprite_p.h
src/loaders/: game_loader.h  grid_game_loader.cpp  grid_game_loader.h  grid_game_loader_p.h  json_game_loader.cpp  json_game_loader.h  json_game_loader_p.h  simple_game_loader.cpp  simple_game_loader.h  simple_game_loader_p.h
